Feat: Implement location input fields and basic suggestion functionality
-   Added `SetPickUpPoint` and `SetDropOffPoint` intents in `HomeIntent.kt` to handle setting location inputs.
-   Updated `HomeState.kt` to include `pickUpPoint` and `dropOffPoint` properties.
-   Added `Extenstions.kt` with utility functions `currentState` and `reduceState` for state management.
-   Created `ic_location.xml` for location icon.
-   Modified `Theme.kt` to remove dynamic colors.
-   Updated `MainActivity.kt` to reflect the changes in theme.
-   Added new strings for location inputs in `strings.xml`.
-   Refactored `HomeScreen.kt` to add TopBar, `BumbleCarBasicTextField` and location inputs
-   Created `BumbleCarBasicTextField.kt` to create `OutlinedTextField` with suggestions.
-   Refactored `NavGraph.kt` to rename `navGraph` function to `NavGraph`.
-   Refactored `HomeViewModel.kt` to handle `SetPickUpPoint` and `SetDropOffPoint` intents and update the state.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Bumble Car</string>
+    <string name="bumble">Bumble</string>
+    <string name="car">Car</string>
+    <string name="pickup_location">Pickup location</string>
+    <string name="enter_your_pick_up_location">Enter your pick up location</string>
+    <string name="drop_off_point">Drop off point</string>
+    <string name="enter_your_drop_off_location">Enter your drop off location</string>
 </resources>
