Feat: Add date pickers for pick-up and drop-off dates
- Added `ic_calendar.xml` for the calendar icon.
- Created `BumbleCarDatePicker.kt` for a custom date picker.
- Implemented date selection functionality in `HomeScreen.kt` using `DatePickerDialog`.
- Modified `HomeIntent.kt` to include `SetPickUpDate` and `SetDropOffDate` intents.
- Updated `HomeState.kt` to include `pickUpDate` and `dropOffDate` fields.
- Added `Extensions.kt` with `parseDate` function for date formatting.
- Updated `HomeViewModel.kt` to handle date setting intents.
- Modified `strings.xml` to include "pick up date" and "drop off date" strings.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="enter_your_pick_up_location">Enter your pick up location</string>
     <string name="drop_off_point">Drop off point</string>
     <string name="enter_your_drop_off_location">Enter your drop off location</string>
+    <string name="pick_up_date">Pick up date</string>
+    <string name="drop_off_date">Drop off date</string>
 </resources>
